[project]
name = "learn-diffusions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "comet-ml>=3.49.4",
    "einops>=0.8.1",
    "imageio[ffmpeg]>=2.37.0",
    "safetensors>=0.5.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
